Upgrade Java source/target from 11 to 17
- Apply instanceof pattern matching
- Add @Serial annotation to serialVersionUID fields
- Convert String.format to .formatted
- Replace Paths.get with Path.of

Builds successfully with JDK 17.